test/e2e/testdata/ext-proc-envoyextensionpolicy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-ext-proc
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /processor
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: "x-request-from-ext-proc-metadata"
          value: '%DYNAMIC_METADATA(io.envoyproxy.gateway.e2e:ext-proc-emitted-metadata)%'
  - matches:
    - path:
        type: PathPrefix
        value: /processor-route-rule-name
    name: rule-name
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: "x-request-from-ext-proc-metadata"
          value: '%DYNAMIC_METADATA(io.envoyproxy.gateway.e2e:ext-proc-emitted-metadata)%'
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-without-procmode
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /no-processor
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: ext-proc-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-ext-proc
  extProc:
  - backendRefs:
    - name: grpc-ext-proc
      namespace: gateway-conformance-infra
      port: 9002
    backendSettings:
      healthCheck:
        active:
          type: GRPC
          grpc:
            service: envoy.service.ext_proc.v3.ExternalProcessor
          interval: 5s
          timeout: 1s
          unhealthyThreshold: 3
          healthyThreshold: 1
          healthCheckLog:
            sinks:
            - type: File
              file:
                path: /dev/stdout
    processingMode:
      request:
        attributes:
        - xds.route_name
      response:
        attributes:
        - xds.route_name
    metadata:
      accessibleNamespaces:
      - io.envoyproxy.gateway.e2e
      - envoy.filters.http.rbac
      writableNamespaces:
      - io.envoyproxy.gateway.e2e
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: ext-proc-test-route-rule
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-ext-proc
    sectionName: rule-name
  extProc:
  - backendRefs:
    - name: grpc-ext-proc
      namespace: gateway-conformance-infra
      port: 9002
    processingMode:
      request:
        attributes:
        - xds.route_name
      response:
        attributes:
        - xds.route_name
        - request.path
    metadata:
      accessibleNamespaces:
      - io.envoyproxy.gateway.e2e
      - envoy.filters.http.rbac
      writableNamespaces:
      - io.envoyproxy.gateway.e2e
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-ext-proc
  authorization:
    defaultAction: Allow
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: ext-proc-no-procmode-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-without-procmode
  extProc:
  - backendRefs:
    - name: grpc-ext-proc
      namespace: gateway-conformance-infra
      port: 9002
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: grpc-ext-proc-btls
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ''
    kind: Service
    name: grpc-ext-proc
    sectionName: grpc
  validation:
    caCertificateRefs:
    - name: grpc-ext-proc-ca
      group: ''
      kind: ConfigMap
    hostname: grpc-ext-proc.envoygateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-extproc-uds-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /uds-processor
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: grpc-uds-ext-proc
  namespace: gateway-conformance-infra
spec:
  endpoints:
  - unix:
      path: /var/run/ext-proc/extproc.sock
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: ext-proc-uds-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-extproc-uds-tls
  extProc:
  - backendRefs:
    - kind: Backend
      group: gateway.envoyproxy.io
      name: grpc-uds-ext-proc
      namespace: gateway-conformance-infra
    processingMode:
      request: {}
      response: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: policy-btls-uds-extproc
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.envoyproxy.io
    kind: Backend
    name: grpc-uds-ext-proc
  validation:
    caCertificateRefs:
    - name: grpc-ext-proc-ca
      group: ''
      kind: ConfigMap
    hostname: grpc-ext-proc.envoygateway
